--- a/src/Base.Web/Base.Web.csproj
+++ b/src/Base.Web/Base.Web.csproj
@@ -11,4 +11,11 @@
     <ProjectReference Include="..\Base.Infrastructure\Base.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
