--- a/src/Base.Application/Base.Application.csproj
+++ b/src/Base.Application/Base.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Base.Domain\Base.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+  </ItemGroup>
+
 </Project>
